// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`typescript-simple > typescript-simple 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "overrides": [
      {
        "files": [
          "**/*.ts",
          "**/*.tsx",
        ],
        "rules": {
          "@typescript-eslint/ban-ts-comment": [
            "error",
            {
              "minimumDescriptionLength": 10,
            },
          ],
          "@typescript-eslint/no-duplicate-enum-values": "error",
          "@typescript-eslint/no-dynamic-delete": "error",
          "@typescript-eslint/no-empty-object-type": "error",
          "@typescript-eslint/no-explicit-any": "error",
          "@typescript-eslint/no-extra-non-null-assertion": "error",
          "@typescript-eslint/no-extraneous-class": "error",
          "@typescript-eslint/no-misused-new": "error",
          "@typescript-eslint/no-namespace": "error",
          "@typescript-eslint/no-non-null-asserted-nullish-coalescing": "error",
          "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
          "@typescript-eslint/no-non-null-assertion": "error",
          "@typescript-eslint/no-require-imports": "error",
          "@typescript-eslint/no-this-alias": "error",
          "@typescript-eslint/no-unnecessary-type-constraint": "error",
          "@typescript-eslint/no-unsafe-declaration-merging": "error",
          "@typescript-eslint/no-unsafe-function-type": "error",
          "@typescript-eslint/no-wrapper-object-types": "error",
          "@typescript-eslint/prefer-as-const": "error",
          "@typescript-eslint/prefer-literal-enum-member": "error",
          "@typescript-eslint/prefer-namespace-keyword": "error",
          "@typescript-eslint/triple-slash-reference": "error",
          "constructor-super": "off",
          "no-array-constructor": "error",
          "no-class-assign": "off",
          "no-const-assign": "off",
          "no-dupe-class-members": "off",
          "no-dupe-keys": "off",
          "no-func-assign": "off",
          "no-import-assign": "off",
          "no-new-native-nonconstructor": "off",
          "no-obj-calls": "off",
          "no-redeclare": "off",
          "no-setter-return": "off",
          "no-this-before-super": "off",
          "no-throw-literal": "off",
          "no-unsafe-negation": "off",
          "no-unused-expressions": "error",
          "no-unused-vars": "error",
          "no-useless-constructor": "error",
          "no-var": "error",
          "no-with": "off",
          "prefer-promise-reject-errors": "off",
          "prefer-rest-params": "error",
          "prefer-spread": "error",
          "require-await": "off",
        },
      },
      {
        "files": [
          "**/*.ts",
          "**/*.tsx",
        ],
        "plugins": [
          "typescript",
        ],
      },
    ],
    "plugins": [],
    "rules": {
      "no-invalid-regexp": "error",
    },
  },
  "warnings": [
    "unsupported rule, but available as a nursery rule: getter-return",
    "unsupported rule, but available as a nursery rule: no-undef",
    "unsupported rule, but available as a nursery rule: no-unreachable",
    "unsupported rule: prefer-const",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/await-thenable",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-array-delete",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-base-to-string",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-confusing-void-expression",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-deprecated",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-duplicate-type-constituents",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-floating-promises",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-for-in-array",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-implied-eval",
    "unsupported rule: @typescript-eslint/no-invalid-void-type",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-meaningless-void-operator",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-misused-promises",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-misused-spread",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-mixed-enums",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-redundant-type-constituents",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unnecessary-boolean-literal-compare",
    "unsupported rule: @typescript-eslint/no-unnecessary-condition",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unnecessary-template-expression",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unnecessary-type-arguments",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unnecessary-type-assertion",
    "unsupported rule: @typescript-eslint/no-unnecessary-type-conversion",
    "unsupported rule: @typescript-eslint/no-unnecessary-type-parameters",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unsafe-argument",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unsafe-assignment",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unsafe-call",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unsafe-enum-comparison",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unsafe-member-access",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unsafe-return",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unsafe-unary-minus",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/only-throw-error",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/prefer-promise-reject-errors",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/prefer-reduce-type-parameter",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/prefer-return-this-type",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/related-getter-setter-pairs",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/require-await",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/restrict-plus-operands",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/restrict-template-expressions",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/return-await",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/unbound-method",
    "unsupported rule: @typescript-eslint/unified-signatures",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/use-unknown-in-catch-callback-variable",
  ],
}
`;

exports[`typescript-simple --js-plugins > typescript-simple--js-plugins 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "overrides": [
      {
        "files": [
          "**/*.ts",
          "**/*.tsx",
        ],
        "rules": {
          "@typescript-eslint/ban-ts-comment": [
            "error",
            {
              "minimumDescriptionLength": 10,
            },
          ],
          "@typescript-eslint/no-duplicate-enum-values": "error",
          "@typescript-eslint/no-dynamic-delete": "error",
          "@typescript-eslint/no-empty-object-type": "error",
          "@typescript-eslint/no-explicit-any": "error",
          "@typescript-eslint/no-extra-non-null-assertion": "error",
          "@typescript-eslint/no-extraneous-class": "error",
          "@typescript-eslint/no-misused-new": "error",
          "@typescript-eslint/no-namespace": "error",
          "@typescript-eslint/no-non-null-asserted-nullish-coalescing": "error",
          "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
          "@typescript-eslint/no-non-null-assertion": "error",
          "@typescript-eslint/no-require-imports": "error",
          "@typescript-eslint/no-this-alias": "error",
          "@typescript-eslint/no-unnecessary-type-constraint": "error",
          "@typescript-eslint/no-unsafe-declaration-merging": "error",
          "@typescript-eslint/no-unsafe-function-type": "error",
          "@typescript-eslint/no-wrapper-object-types": "error",
          "@typescript-eslint/prefer-as-const": "error",
          "@typescript-eslint/prefer-literal-enum-member": "error",
          "@typescript-eslint/prefer-namespace-keyword": "error",
          "@typescript-eslint/triple-slash-reference": "error",
          "constructor-super": "off",
          "no-array-constructor": "error",
          "no-class-assign": "off",
          "no-const-assign": "off",
          "no-dupe-class-members": "off",
          "no-dupe-keys": "off",
          "no-func-assign": "off",
          "no-import-assign": "off",
          "no-new-native-nonconstructor": "off",
          "no-obj-calls": "off",
          "no-redeclare": "off",
          "no-setter-return": "off",
          "no-this-before-super": "off",
          "no-throw-literal": "off",
          "no-unsafe-negation": "off",
          "no-unused-expressions": "error",
          "no-unused-vars": "error",
          "no-useless-constructor": "error",
          "no-var": "error",
          "no-with": "off",
          "prefer-promise-reject-errors": "off",
          "prefer-rest-params": "error",
          "prefer-spread": "error",
          "require-await": "off",
        },
      },
      {
        "files": [
          "**/*.ts",
          "**/*.tsx",
        ],
        "plugins": [
          "typescript",
        ],
      },
    ],
    "plugins": [],
    "rules": {
      "no-invalid-regexp": "error",
    },
  },
  "warnings": [
    "unsupported rule, but available as a nursery rule: getter-return",
    "unsupported rule, but available as a nursery rule: no-undef",
    "unsupported rule, but available as a nursery rule: no-unreachable",
    "unsupported rule: prefer-const",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/await-thenable",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-array-delete",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-base-to-string",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-confusing-void-expression",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-deprecated",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-duplicate-type-constituents",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-floating-promises",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-for-in-array",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-implied-eval",
    "unsupported rule: @typescript-eslint/no-invalid-void-type",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-meaningless-void-operator",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-misused-promises",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-misused-spread",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-mixed-enums",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-redundant-type-constituents",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unnecessary-boolean-literal-compare",
    "unsupported rule: @typescript-eslint/no-unnecessary-condition",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unnecessary-template-expression",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unnecessary-type-arguments",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unnecessary-type-assertion",
    "unsupported rule: @typescript-eslint/no-unnecessary-type-conversion",
    "unsupported rule: @typescript-eslint/no-unnecessary-type-parameters",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unsafe-argument",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unsafe-assignment",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unsafe-call",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unsafe-enum-comparison",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unsafe-member-access",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unsafe-return",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unsafe-unary-minus",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/only-throw-error",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/prefer-promise-reject-errors",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/prefer-reduce-type-parameter",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/prefer-return-this-type",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/related-getter-setter-pairs",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/require-await",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/restrict-plus-operands",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/restrict-template-expressions",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/return-await",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/unbound-method",
    "unsupported rule: @typescript-eslint/unified-signatures",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/use-unknown-in-catch-callback-variable",
  ],
}
`;

exports[`typescript-simple --type-aware > typescript-simple--type-aware 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "overrides": [
      {
        "files": [
          "**/*.ts",
          "**/*.tsx",
        ],
        "rules": {
          "@typescript-eslint/await-thenable": "error",
          "@typescript-eslint/ban-ts-comment": [
            "error",
            {
              "minimumDescriptionLength": 10,
            },
          ],
          "@typescript-eslint/no-array-delete": "error",
          "@typescript-eslint/no-base-to-string": "error",
          "@typescript-eslint/no-confusing-void-expression": "error",
          "@typescript-eslint/no-deprecated": "error",
          "@typescript-eslint/no-duplicate-enum-values": "error",
          "@typescript-eslint/no-duplicate-type-constituents": "error",
          "@typescript-eslint/no-dynamic-delete": "error",
          "@typescript-eslint/no-empty-object-type": "error",
          "@typescript-eslint/no-explicit-any": "error",
          "@typescript-eslint/no-extra-non-null-assertion": "error",
          "@typescript-eslint/no-extraneous-class": "error",
          "@typescript-eslint/no-floating-promises": "error",
          "@typescript-eslint/no-for-in-array": "error",
          "@typescript-eslint/no-implied-eval": "error",
          "@typescript-eslint/no-meaningless-void-operator": "error",
          "@typescript-eslint/no-misused-new": "error",
          "@typescript-eslint/no-misused-promises": "error",
          "@typescript-eslint/no-misused-spread": "error",
          "@typescript-eslint/no-mixed-enums": "error",
          "@typescript-eslint/no-namespace": "error",
          "@typescript-eslint/no-non-null-asserted-nullish-coalescing": "error",
          "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
          "@typescript-eslint/no-non-null-assertion": "error",
          "@typescript-eslint/no-redundant-type-constituents": "error",
          "@typescript-eslint/no-require-imports": "error",
          "@typescript-eslint/no-this-alias": "error",
          "@typescript-eslint/no-unnecessary-boolean-literal-compare": "error",
          "@typescript-eslint/no-unnecessary-template-expression": "error",
          "@typescript-eslint/no-unnecessary-type-arguments": "error",
          "@typescript-eslint/no-unnecessary-type-assertion": "error",
          "@typescript-eslint/no-unnecessary-type-constraint": "error",
          "@typescript-eslint/no-unsafe-argument": "error",
          "@typescript-eslint/no-unsafe-assignment": "error",
          "@typescript-eslint/no-unsafe-call": "error",
          "@typescript-eslint/no-unsafe-declaration-merging": "error",
          "@typescript-eslint/no-unsafe-enum-comparison": "error",
          "@typescript-eslint/no-unsafe-function-type": "error",
          "@typescript-eslint/no-unsafe-member-access": "error",
          "@typescript-eslint/no-unsafe-return": "error",
          "@typescript-eslint/no-unsafe-unary-minus": "error",
          "@typescript-eslint/no-wrapper-object-types": "error",
          "@typescript-eslint/only-throw-error": "error",
          "@typescript-eslint/prefer-as-const": "error",
          "@typescript-eslint/prefer-literal-enum-member": "error",
          "@typescript-eslint/prefer-namespace-keyword": "error",
          "@typescript-eslint/prefer-promise-reject-errors": "error",
          "@typescript-eslint/prefer-reduce-type-parameter": "error",
          "@typescript-eslint/prefer-return-this-type": "error",
          "@typescript-eslint/related-getter-setter-pairs": "error",
          "@typescript-eslint/require-await": "error",
          "@typescript-eslint/restrict-plus-operands": [
            "error",
            {
              "allowAny": false,
              "allowBoolean": false,
              "allowNullish": false,
              "allowNumberAndString": false,
              "allowRegExp": false,
            },
          ],
          "@typescript-eslint/restrict-template-expressions": [
            "error",
            {
              "allowAny": false,
              "allowBoolean": false,
              "allowNever": false,
              "allowNullish": false,
              "allowNumber": false,
              "allowRegExp": false,
            },
          ],
          "@typescript-eslint/return-await": [
            "error",
            "error-handling-correctness-only",
          ],
          "@typescript-eslint/triple-slash-reference": "error",
          "@typescript-eslint/unbound-method": "error",
          "@typescript-eslint/use-unknown-in-catch-callback-variable": "error",
          "constructor-super": "off",
          "no-array-constructor": "error",
          "no-class-assign": "off",
          "no-const-assign": "off",
          "no-dupe-class-members": "off",
          "no-dupe-keys": "off",
          "no-func-assign": "off",
          "no-import-assign": "off",
          "no-new-native-nonconstructor": "off",
          "no-obj-calls": "off",
          "no-redeclare": "off",
          "no-setter-return": "off",
          "no-this-before-super": "off",
          "no-throw-literal": "off",
          "no-unsafe-negation": "off",
          "no-unused-expressions": "error",
          "no-unused-vars": "error",
          "no-useless-constructor": "error",
          "no-var": "error",
          "no-with": "off",
          "prefer-promise-reject-errors": "off",
          "prefer-rest-params": "error",
          "prefer-spread": "error",
          "require-await": "off",
        },
      },
      {
        "files": [
          "**/*.ts",
          "**/*.tsx",
        ],
        "plugins": [
          "typescript",
        ],
      },
    ],
    "plugins": [],
    "rules": {
      "no-invalid-regexp": "error",
    },
  },
  "warnings": [
    "unsupported rule, but available as a nursery rule: getter-return",
    "unsupported rule, but available as a nursery rule: no-undef",
    "unsupported rule, but available as a nursery rule: no-unreachable",
    "unsupported rule: prefer-const",
    "unsupported rule: @typescript-eslint/no-invalid-void-type",
    "unsupported rule: @typescript-eslint/no-unnecessary-condition",
    "unsupported rule: @typescript-eslint/no-unnecessary-type-conversion",
    "unsupported rule: @typescript-eslint/no-unnecessary-type-parameters",
    "unsupported rule: @typescript-eslint/unified-signatures",
  ],
}
`;

exports[`typescript-simple merge > typescript-simple--merge 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "error",
      "perf": "error",
    },
    "env": {
      "builtin": true,
    },
    "overrides": [
      {
        "files": [
          "**/*.ts",
          "**/*.tsx",
        ],
        "rules": {
          "@typescript-eslint/ban-ts-comment": [
            "error",
            {
              "minimumDescriptionLength": 10,
            },
          ],
          "@typescript-eslint/no-duplicate-enum-values": "error",
          "@typescript-eslint/no-dynamic-delete": "error",
          "@typescript-eslint/no-empty-object-type": "error",
          "@typescript-eslint/no-explicit-any": "error",
          "@typescript-eslint/no-extra-non-null-assertion": "error",
          "@typescript-eslint/no-extraneous-class": "error",
          "@typescript-eslint/no-misused-new": "error",
          "@typescript-eslint/no-namespace": "error",
          "@typescript-eslint/no-non-null-asserted-nullish-coalescing": "error",
          "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
          "@typescript-eslint/no-non-null-assertion": "error",
          "@typescript-eslint/no-require-imports": "error",
          "@typescript-eslint/no-this-alias": "error",
          "@typescript-eslint/no-unnecessary-type-constraint": "error",
          "@typescript-eslint/no-unsafe-declaration-merging": "error",
          "@typescript-eslint/no-unsafe-function-type": "error",
          "@typescript-eslint/no-wrapper-object-types": "error",
          "@typescript-eslint/prefer-as-const": "error",
          "@typescript-eslint/prefer-literal-enum-member": "error",
          "@typescript-eslint/prefer-namespace-keyword": "error",
          "@typescript-eslint/triple-slash-reference": "error",
          "constructor-super": "off",
          "no-array-constructor": "error",
          "no-class-assign": "off",
          "no-const-assign": "off",
          "no-dupe-class-members": "off",
          "no-dupe-keys": "off",
          "no-func-assign": "off",
          "no-import-assign": "off",
          "no-new-native-nonconstructor": "off",
          "no-obj-calls": "off",
          "no-redeclare": "off",
          "no-setter-return": "off",
          "no-this-before-super": "off",
          "no-throw-literal": "off",
          "no-unsafe-negation": "off",
          "no-unused-expressions": "error",
          "no-unused-vars": "error",
          "no-useless-constructor": "error",
          "no-var": "error",
          "no-with": "off",
          "prefer-promise-reject-errors": "off",
          "prefer-rest-params": "error",
          "prefer-spread": "error",
          "require-await": "off",
        },
      },
      {
        "files": [
          "**/*.ts",
          "**/*.tsx",
        ],
        "plugins": [
          "typescript",
        ],
      },
    ],
    "plugins": [],
    "rules": {},
  },
  "warnings": [
    "unsupported rule, but available as a nursery rule: getter-return",
    "unsupported rule, but available as a nursery rule: no-undef",
    "unsupported rule, but available as a nursery rule: no-unreachable",
    "unsupported rule: prefer-const",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/await-thenable",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-array-delete",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-base-to-string",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-confusing-void-expression",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-deprecated",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-duplicate-type-constituents",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-floating-promises",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-for-in-array",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-implied-eval",
    "unsupported rule: @typescript-eslint/no-invalid-void-type",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-meaningless-void-operator",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-misused-promises",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-misused-spread",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-mixed-enums",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-redundant-type-constituents",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unnecessary-boolean-literal-compare",
    "unsupported rule: @typescript-eslint/no-unnecessary-condition",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unnecessary-template-expression",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unnecessary-type-arguments",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unnecessary-type-assertion",
    "unsupported rule: @typescript-eslint/no-unnecessary-type-conversion",
    "unsupported rule: @typescript-eslint/no-unnecessary-type-parameters",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unsafe-argument",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unsafe-assignment",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unsafe-call",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unsafe-enum-comparison",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unsafe-member-access",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unsafe-return",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/no-unsafe-unary-minus",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/only-throw-error",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/prefer-promise-reject-errors",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/prefer-reduce-type-parameter",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/prefer-return-this-type",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/related-getter-setter-pairs",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/require-await",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/restrict-plus-operands",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/restrict-template-expressions",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/return-await",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/unbound-method",
    "unsupported rule: @typescript-eslint/unified-signatures",
    "type-aware rule detected, but \`--type-aware\` is not enabled: @typescript-eslint/use-unknown-in-catch-callback-variable",
  ],
}
`;
